--- a/android/app/src/main/res/menu/book_search.xml
+++ b/android/app/src/main/res/menu/book_search.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:one="http://schemas.android.com/apk/res-auto">
-    <item
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<item
         android:id="@+id/search_view"
         android:icon="@android:drawable/ic_menu_search"
         android:showAsAction="always"
