--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -1,81 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
 
     <EditText
+        android:id="@+id/txt_review"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/txt_review"
-        android:layout_gravity="right|bottom"
-        android:layout_below="@+id/txt_author"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="review"
-        android:selectAllOnFocus="true"
-        android:maxLength="140"
+        android:layout_below="@+id/txt_author"
+        android:layout_gravity="right|bottom"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:hint="review"
+        android:maxLength="140"
+        android:selectAllOnFocus="true"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <Switch
+        android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="公開する"
-        android:id="@+id/switch1"
-        android:layout_below="@+id/txt_review"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/txt_review"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:text="公開する" />
 
-    <Button
+    <ImageView
+        android:id="@+id/book_photo"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:id="@+id/book_photo"
-        android:drawableTop="@drawable/photo_placeholder"
-        android:paddingTop="48dp"
         android:background="@drawable/btn_rect_common_back"
-        android:scaleType="center"
+        android:scaleType="centerInside"
+        android:src="@drawable/photo_placeholder"
+        android:text="@string/click_to_register_photo"
         android:layout_margin="8dp"
-        android:text="Click here to register Photo!"/>
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+
+        <requestFocus />
+    </ImageView>
 
     <TextView
+        android:id="@+id/txt_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/txt_title"
+        android:layout_below="@+id/book_photo"
+        android:layout_marginLeft="8dp"
+        android:layout_toLeftOf="@+id/btn_search_book"
         android:hint="title"
         android:padding="4dp"
-        android:layout_below="@+id/book_photo"
-        android:layout_toLeftOf="@+id/btn_search_book"
-        android:layout_marginLeft="8dp" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
+        android:id="@+id/txt_author"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/txt_author"
+        android:layout_below="@+id/txt_title"
+        android:layout_marginLeft="8dp"
+        android:layout_toLeftOf="@+id/btn_search_book"
         android:hint="author"
         android:padding="4dp"
-        android:layout_below="@+id/txt_title"
-        android:layout_toLeftOf="@+id/btn_search_book"
-        android:layout_marginLeft="8dp" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageButton
+        android:id="@+id/btn_search_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:id="@+id/btn_search_book"
-        android:src="@android:drawable/ic_menu_search"
-        android:background="@drawable/btn_oval_common_back"
-        android:layout_below="@+id/book_photo"
-        android:layout_alignRight="@+id/book_photo"
         android:layout_alignEnd="@+id/book_photo"
-        android:layout_margin="8dp" />
-
+        android:layout_alignRight="@+id/book_photo"
+        android:layout_below="@+id/book_photo"
+        android:layout_margin="8dp"
+        android:background="@drawable/btn_oval_common_back"
+        android:padding="4dp"
+        android:src="@android:drawable/ic_menu_search" />
 
 </RelativeLayout>
