--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="16dp"
         android:text="公開する" />
 
-    <ImageView
+    <com.parse.ParseImageView
         android:id="@+id/book_photo"
         android:layout_width="match_parent"
         android:layout_height="300dp"
@@ -44,7 +44,7 @@
         android:focusableInTouchMode="true">
 
         <requestFocus />
-    </ImageView>
+    </com.parse.ParseImageView>
 
     <TextView
         android:id="@+id/txt_title"
