--- a/android/app/src/main/res/layout/fragment_book_detail.xml
+++ b/android/app/src/main/res/layout/fragment_book_detail.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content" />
 
         <LinearLayout
-            android:id="@+id/progressContainer"
+            android:id="@+id/progress_container"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
