--- a/android/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_photo_detail.xml
@@ -31,7 +31,7 @@
         one-liners:item_interval="100.0" />
 
     <LinearLayout
-        android:id="@+id/progressContainer"
+        android:id="@+id/progress_container"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/progress_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
