--- a/android/app/src/main/res/layout/carddemo_extras_staggered_thumbnail_layout.xml
+++ b/android/app/src/main/res/layout/carddemo_extras_staggered_thumbnail_layout.xml
@@ -17,7 +17,7 @@
   ~  *****************************************************************************
   -->
 
-<ImageView
+<com.parse.ParseImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_thumbnail_image"
     android:scaleType="centerCrop"
