--- a/android/app/src/main/res/layout/list_loading.xml
+++ b/android/app/src/main/res/layout/list_loading.xml
@@ -3,11 +3,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey"
     android:gravity="center_vertical|center_horizontal">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!--<ProgressBar-->
+    <!--style="?android:attr/progressBarStyleSmall"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content" />-->
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="load more..."
+        android:id="@+id/textView"
+        android:layout_margin="12dp" />
 </LinearLayout>
